[gd_scene load_steps=6 format=3 uid="uid://ctnpoit68dsld"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_akeri"]
[ext_resource type="PackedScene" uid="uid://cy0uso36digxw" path="res://scenes/menus/menus.tscn" id="1_c7o8y"]
[ext_resource type="Script" path="res://scripts/minigame_manager.gd" id="2_yod0e"]
[ext_resource type="Script" path="res://scripts/cutscenes/cutscene_manager.gd" id="4_cyvwb"]
[ext_resource type="PackedScene" uid="uid://6331rs70pmbj" path="res://scenes/tutorials/tutorial_manager.tscn" id="8_7lrus"]

[node name="Game" type="Node"]
script = ExtResource("1_akeri")

[node name="MinigameManager" type="Node" parent="."]
script = ExtResource("2_yod0e")

[node name="TutorialManager" parent="." instance=ExtResource("8_7lrus")]
layer = 2

[node name="CutsceneManager" type="CanvasLayer" parent="."]
layer = 3
script = ExtResource("4_cyvwb")

[node name="Menus" parent="." instance=ExtResource("1_c7o8y")]
layer = 4
visible = false

[connection signal="minigame_ended" from="MinigameManager" to="Menus" method="_on_minigame_manager_minigame_ended"]
[connection signal="tutorial_finished" from="TutorialManager" to="." method="_on_tutorial_manager_tutorial_finished"]
[connection signal="dipping_finished" from="CutsceneManager" to="." method="_on_cutscene_manager_dipping_finished"]
[connection signal="end_finished" from="CutsceneManager" to="." method="_on_cutscene_manager_end_finished"]
[connection signal="intro_finished" from="CutsceneManager" to="." method="_on_cutscene_manager_intro_finished"]
[connection signal="level_selected" from="Menus" to="." method="_on_menus_level_selected"]
[connection signal="menu_closed" from="Menus" to="." method="_on_menus_menu_closed"]
[connection signal="menu_opened" from="Menus" to="." method="_on_menus_menu_opened"]
[connection signal="next_pressed" from="Menus" to="." method="_on_menus_next_pressed"]
[connection signal="play_pressed" from="Menus" to="." method="_on_menus_play_pressed"]
[connection signal="retry_pressed" from="Menus" to="." method="_on_menus_retry_pressed"]
[connection signal="show_tutorial" from="Menus" to="." method="_on_menus_show_tutorial"]
[connection signal="trigger_minigame_kill" from="Menus" to="." method="_on_menus_trigger_minigame_kill"]
